[gd_scene load_steps=48 format=3 uid="uid://co36all3dpdes"]

[ext_resource type="Script" path="res://components/player/player.gd" id="1_ne567"]
[ext_resource type="Texture2D" uid="uid://crs321u015ss5" path="res://assets/Art/character_sprites/sprite-sheet_solid-drake_5x.png" id="2_8yru1"]
[ext_resource type="PackedScene" uid="uid://cst0ustyi1sg0" path="res://components/hp_component/hp_component.tscn" id="3_i3iyi"]
[ext_resource type="Texture2D" uid="uid://gusrvcir4ipb" path="res://assets/Art/character_sprites/sprite-sheet_solid-drake_rolls_5x.png" id="3_jyrbi"]
[ext_resource type="Texture2D" uid="uid://brmt4elxg86xe" path="res://assets/Art/character_sprites/sprite-sheet_enemy-takedown_5x.png" id="4_xm3rc"]
[ext_resource type="PackedScene" uid="uid://dnx83jbqaexf2" path="res://components/health_bar/health_bar.tscn" id="5_meuaa"]
[ext_resource type="Texture2D" uid="uid://cwa3qa8aos0nq" path="res://assets/UI/bullet.png" id="5_xxucu"]
[ext_resource type="PackedScene" uid="uid://hiks5r52quxt" path="res://components/player/player_status_bar/player_status_bar.tscn" id="6_qplpc"]
[ext_resource type="PackedScene" uid="uid://2q75sm8cbag1" path="res://components/player_camera/player_camera.tscn" id="7_ffxvj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_muplh"]
atlas = ExtResource("2_8yru1")
region = Rect2(0, 150, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_gs663"]
atlas = ExtResource("2_8yru1")
region = Rect2(0, 0, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ofbkh"]
atlas = ExtResource("2_8yru1")
region = Rect2(0, 150, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_668eg"]
atlas = ExtResource("2_8yru1")
region = Rect2(0, 450, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_b3jy3"]
atlas = ExtResource("2_8yru1")
region = Rect2(0, 300, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_rj2kh"]
atlas = ExtResource("3_jyrbi")
region = Rect2(0, 0, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ypvu"]
atlas = ExtResource("3_jyrbi")
region = Rect2(100, 0, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ffft"]
atlas = ExtResource("3_jyrbi")
region = Rect2(200, 0, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_uwoau"]
atlas = ExtResource("3_jyrbi")
region = Rect2(300, 0, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_lug6s"]
atlas = ExtResource("3_jyrbi")
region = Rect2(0, 150, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_qb1ea"]
atlas = ExtResource("3_jyrbi")
region = Rect2(100, 150, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_8xnpj"]
atlas = ExtResource("3_jyrbi")
region = Rect2(200, 150, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_78dks"]
atlas = ExtResource("3_jyrbi")
region = Rect2(300, 150, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_r44d4"]
atlas = ExtResource("4_xm3rc")
region = Rect2(0, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_ikarl"]
atlas = ExtResource("4_xm3rc")
region = Rect2(200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_en57w"]
atlas = ExtResource("4_xm3rc")
region = Rect2(400, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_bt2h6"]
atlas = ExtResource("4_xm3rc")
region = Rect2(600, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_3u82g"]
atlas = ExtResource("2_8yru1")
region = Rect2(300, 600, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_edpjj"]
atlas = ExtResource("2_8yru1")
region = Rect2(0, 600, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_p8vs0"]
atlas = ExtResource("2_8yru1")
region = Rect2(100, 600, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_cdd11"]
atlas = ExtResource("2_8yru1")
region = Rect2(200, 600, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_oisko"]
atlas = ExtResource("2_8yru1")
region = Rect2(300, 750, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1dl4"]
atlas = ExtResource("2_8yru1")
region = Rect2(0, 750, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_hhg7i"]
atlas = ExtResource("2_8yru1")
region = Rect2(100, 750, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_0vwyn"]
atlas = ExtResource("2_8yru1")
region = Rect2(200, 750, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_5g5iv"]
atlas = ExtResource("2_8yru1")
region = Rect2(300, 1050, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ec27w"]
atlas = ExtResource("2_8yru1")
region = Rect2(0, 1050, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_0y3ho"]
atlas = ExtResource("2_8yru1")
region = Rect2(100, 1050, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_v5sg5"]
atlas = ExtResource("2_8yru1")
region = Rect2(200, 1050, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_cvkbb"]
atlas = ExtResource("2_8yru1")
region = Rect2(300, 900, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_1euw3"]
atlas = ExtResource("2_8yru1")
region = Rect2(0, 900, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_rhj36"]
atlas = ExtResource("2_8yru1")
region = Rect2(100, 900, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_t144r"]
atlas = ExtResource("2_8yru1")
region = Rect2(200, 900, 100, 150)

[sub_resource type="SpriteFrames" id="SpriteFrames_ibula"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_muplh")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gs663")
}],
"loop": true,
"name": &"idle_back",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ofbkh")
}],
"loop": true,
"name": &"idle_front",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_668eg")
}],
"loop": true,
"name": &"idle_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b3jy3")
}],
"loop": true,
"name": &"idle_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rj2kh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ypvu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ffft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uwoau")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lug6s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qb1ea")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8xnpj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_78dks")
}],
"loop": true,
"name": &"roll",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r44d4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ikarl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_en57w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bt2h6")
}],
"loop": true,
"name": &"takedown",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3u82g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_edpjj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p8vs0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cdd11")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3u82g")
}],
"loop": true,
"name": &"walk_back",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oisko")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1dl4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhg7i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0vwyn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oisko")
}],
"loop": true,
"name": &"walk_front",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5g5iv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ec27w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0y3ho")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v5sg5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5g5iv")
}],
"loop": true,
"name": &"walk_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cvkbb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1euw3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rhj36")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t144r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cvkbb")
}],
"loop": true,
"name": &"walk_right",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yikyn"]
size = Vector2(93, 93)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oiusy"]
size = Vector2(93, 93)

[sub_resource type="Shader" id="Shader_5w34g"]
resource_local_to_scene = true
code = "shader_type canvas_item;

uniform bool active;
uniform vec3 flash_color : source_color = vec3(1.0);


void fragment(){
	vec4 t = texture(TEXTURE, UV);
	if (active == true) {
		COLOR = vec4(flash_color, t.a);
	}
	
}"

[sub_resource type="Gradient" id="Gradient_v0pe5"]
resource_local_to_scene = true
colors = PackedColorArray(1, 0.381127, 0.504527, 1, 0.235294, 0.886275, 0, 1)

[node name="Player" type="CharacterBody2D"]
collision_mask = 46
motion_mode = 1
script = ExtResource("1_ne567")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
sprite_frames = SubResource("SpriteFrames_ibula")
animation = &"takedown"
autoplay = "idle_front"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
position = Vector2(0.5, 1.5)
shape = SubResource("RectangleShape2D_yikyn")

[node name="TakedownDetectionArea" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="TakedownDetectionArea"]
shape = SubResource("RectangleShape2D_oiusy")

[node name="HPComponent" parent="." node_paths=PackedStringArray("owner_sprite", "health_bar") instance=ExtResource("3_i3iyi")]
unique_name_in_owner = true
max_hp = 25.0
hit_flash_shader = SubResource("Shader_5w34g")
damage_hit_flash_color = Color(0.972549, 0.301961, 0.392157, 1)
owner_sprite = NodePath("../AnimatedSprite2D")
health_bar = NodePath("../HealthBar")

[node name="HealthBar" parent="." instance=ExtResource("5_meuaa")]
z_index = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 80.0
offset_right = 100.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
gradient = SubResource("Gradient_v0pe5")

[node name="ReloadingProgressDisplay" type="TextureProgressBar" parent="."]
unique_name_in_owner = true
visible = false
light_mask = 0
offset_left = 81.0
offset_top = -46.0
offset_right = 131.0
offset_bottom = 149.0
scale = Vector2(0.507664, 0.507664)
mouse_filter = 2
max_value = 1.0
step = 0.01
value = 0.5
fill_mode = 3
texture_under = ExtResource("5_xxucu")
texture_progress = ExtResource("5_xxucu")
tint_under = Color(0.666667, 0.666667, 0.666667, 0.886275)

[node name="PlayerCamera" parent="." instance=ExtResource("7_ffxvj")]
unique_name_in_owner = true

[node name="ShotCooldownTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="RollCooldownTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="PlayerStatusBar" parent="." node_paths=PackedStringArray("player") instance=ExtResource("6_qplpc")]
modulate = Color(1, 1, 1, 0.670588)
offset_left = -77.0
offset_top = -175.0
offset_right = 27.0
offset_bottom = -125.0
scale = Vector2(1.5, 1.5)
player = NodePath("..")
